--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 <section id="viewmore">
-	<a  id="viewbutton" class="button"href="https://kterry779.github.io/p2.2/">View More</a>
+	<a  id="viewbutton" class="button"href="https://kterry779.github.io/p2.2/" target="_blank">View More</a>
 </section>
 
 
